-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.611 2009-09-10 15:13:46 remko Exp $
-----------------------------------------------------------------------------------------

2009-09-10	remko
	* gmt_init.c:		Introduced option to make material transparent using the
				--TRANSPARENCY setting (or gmtset TRANSPARENCY). Can be viewed
				with Adobe Distiller (only?).
	* gmt_plot.c, gmtdefaults.txt, gmt.h, gmt_globals.h, gmt_keywords.d:	---"---
	* psclip.c, pscoast.c:	Replaced booleans GMT_ps.clip_on and GMT_ps.clip_off with single
				GMT_ps.clip with values -1, 0 or +1.

2009-09-10	jluis
	* mgd77/mgd77magref.c:	It now lets the Core field be computed with the IGRF and added
				to the atmospheric sources calculated with CM4. We added
				this because the secular variation in CM4 is limited to 2002.5
				but the "atmospheric coefficients" can be continuously updated

2009-09-09	pwessel
	* LICENSE.TXT:		Replaced file COPYING with LICENSE.TXT and clarified we are
	  			using GPL v2 as displayed in all source files.
	* GSHHS*:		Updated to GSHHS 2.0.1 so new pscoast options can work
	* configure.ac:		Added --enable-gdal[=dir] for experimental GDAL grid import
				functionality for reading GDAL-supported grids (one band) and
				plotting of geotiff via grdimage

2009-09-08	pwessel
	* mgd77/mgd77magref.c:	Got wrong time as time initialization had changed but
				not implemented in this program.
	* misc/gmt2kml.c:	-T did not handle spaces in titles and folder names
			
2009-09-07	jluis
	* gmt_customio.[ch]:	Added the optional GDAL interface as format 22
	* gmtinstall.bat:	Now has rules to optionally compile the GDAL interface

2009-09-07	remko
	* minmax.c:		Bug fix: -EH did not work

2009-09-06	pwessel
	* gmt_customio.c:	Made surfer grid header i/o 64-bit compliant

2009-09-06	jluis
	* nc2xy.c:		Added -b option (of which only -bo makes sense)

2009-09-06	remko